# accointant

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  justfile
.github/workflows/: rust.yml
config/: auth.toml  db.toml  general.toml  log.toml  mailer.toml  mq.toml  server.toml  templater.toml
db/: set_db_url.sh
db/migrations/: 20240115093237_create_users_table.up.sql  20240213063816_create_category_events_table.down.sql  20240213063816_create_category_events_table.up.sql  20240213063932_create_operation_events_table.down.sql  20240213063932_create_operation_events_table.up.sql  20240225052747_create_tag_events_table.down.sql  20240225052747_create_tag_events_table.up.sql
html/mail/: confirm_registration.hbs
src/: lib.rs  main.rs
src/bootstrap/: app_context.rs  mod.rs
src/config/: actor.rs  actor_error.rs  db.rs  general.rs  mailer.rs  manager.rs  mod.rs
src/config/structs/: auth.rs  db.rs  general.rs  log.rs  mailer.rs  mod.rs  mq.rs  server.rs  templater.rs
src/db/: connection.rs  data_mapper.rs  db_manager.rs  db_transaction.rs  error.rs  factory.rs  manager.rs  mod.rs  pg_manager.rs  query_builder.rs
src/db/connection/: factory.rs  manager.rs  mod.rs  pg_manager.rs
src/db/manager/: db_manager.rs  factory.rs  mod.rs  pg_manager.rs
src/db/transaction/: container.rs  manager.rs  mod.rs  pg_manager.rs
src/db2/: factory.rs  mod.rs
src/db2/connection/: manager.rs  mod.rs  pg_manager.rs  pool.rs
src/di/: error.rs  mod.rs  service_container.rs
src/errors/: client.rs  error.rs  mod.rs  network.rs  server.rs
src/events/: error.rs  event.rs  event_bus.rs  event_bus_factory.rs  event_channel.rs  event_listener.rs  event_listener_registry.rs  event_responder.rs  event_router.rs  mod.rs  mq_event_bus.rs
src/feature/auth/: mod.rs
src/features/: mod.rs
src/features/account/: error.rs
src/features/auth/: error.rs  mod.rs
src/features/balance/: error.rs
src/features/categories/: error.rs
src/features/operations/: error.rs  mod.rs
src/features/shared/: mod.rs
src/features/tags/: error.rs  mod.rs
src/http/: error.rs  error_handler.rs  mod.rs  routes.rs  server.rs
src/http/extractors/: jwt.rs
src/http/handlers/: mod.rs
src/http/middleware/: check_auth.rs  error_handling.rs  mod.rs
src/log/: logger.rs  macros.rs
src/mq/: connection.rs  error.rs  manager.rs  message.rs  mod.rs
src/service/: mailer.rs  mod.rs  templater.rs
src/services/: data_mapper.rs  error.rs  hasher.rs  http_client.rs  jwt.rs  mailer.rs  mod.rs  serializer.rs  templater.rs  tokenizer.rs
src/support/: command_bus.rs  data_mapper.rs  error.rs  id.rs  mod.rs
src/test_utils/: environment.rs
templates/mail/: confirm_registration.hbs
tests/: confirmation_request_test.rs  confirmation_test.rs  login_test.rs  mod.rs  registration_and_confirmation_test.rs  registration_test.rs
tests/account/: creation_test.rs  mod.rs
tests/auth/: confirmation_request_test.rs  confirmation_test.rs  login_test.rs  mod.rs  registration_test.rs
tests/categories/: creation_test.rs
tests/environment/: mod.rs
tests/operations/: creation_test.rs  mod.rs
tests/tags/: creation_test.rs
(+159 files in other folders)
