[package]
name = "metan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.4"
actix-web-validator = "5.0"
actix-web-prom = "0.7"
async-trait = "0.1.77"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15"
futures-util = "0.3"
log = "0.4"
once_cell = "1.19"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "macros", "runtime-tokio-rustls", 'uuid', "chrono"] }
thiserror = "1.0.50"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.16", features = ["derive"] }
